--- a/Draw.csproj
+++ b/Draw.csproj
@@ -79,6 +79,7 @@
     <Compile Include="src\Model\Shape.cs" />
     <Compile Include="src\Model\SquareShape.cs" />
     <Compile Include="src\Model\TriangleShape.cs" />
+    <Compile Include="src\Model\TriangleShape2.cs" />
     <Compile Include="src\Processors\DialogProcessor.cs" />
     <Compile Include="src\Processors\DisplayProcessor.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
